Next Release
============

Features
--------

- The ``request_type`` argument of ZCML ``view`` declarations and
  ``bfg_view`` decorators can now be one of the strings ``GET``,
  ``POST``, ``PUT``, ``DELETE``, or ``HEAD`` instead of a reference to
  the respective interface type imported from
  ``repoze.bfg.interfaces``.

Removals
--------

- Remove ``repoze.bfg.threadlocal.setManager``.  It was only used in
  unit tests.

- Remove ``repoze.bfg.wsgi.HTTPException``,
  ``repoze.bfg.wsgi.NotFound``, and ``repoze.bfg.wsgi.Unauthorized``.
  These classes were disused with the introduction of the
  ``IUnauthorizedView`` and ``INotFoundView`` machinery.

Documentation
-------------

- Add description to narrative templating chapter about how to use
  Chameleon text templates.

- Changed Views narrative chapter to use method strings rather than
  interface types, and moved advanced interface type usage to Events
  narrative chapter.

0.9a8 (2009-05-31)
==================

Features
--------

- It is now possible to register a custom
  ``repoze.bfg.interfaces.INotFoundView`` for a given application.
  This feature replaces the
  ``repoze.bfg.interfaces.INotFoundAppFactory`` feature previously
  described in the Hooks chapter.  The INotFoundView will be called
  when the framework detects that a view lookup done as a result of a
  request fails; it should accept a context object and a request
  object; it should return an IResponse object (a webob response,
  basically).  See the Hooks narrative chapter of the BFG docs for
  more info.

- The error presented when a view invoked by the router returns a
  non-response object now includes the view's name for troubleshooting
  purposes.

Bug Fixes
---------

- A "new response" event is emitted for forbiden and notfound views.

Deprecations
------------

- The ``repoze.bfg.interfaces.INotFoundAppFactory`` interface has been
  deprecated in favor of using the new
  ``repoze.bfg.interfaces.INotFoundView`` mechanism.

Renames